--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.13.0",
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.6",
+    "bootstrap-icons": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "openai": "^4.98.0",
     "react": "^19.1.0",
